# lelamp_runtime

./: .env.example  README.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md  部署与测试.md
lelamp/service/motors/: motors_service.py
lelamp/service/rgb/: rgb_service.py
lelamp/voice/volc_v3/: __init__.py  _protocol.py  stt.py  tts.py
tools/: smoke_doubao.py
