[project]
name = "lelamp-runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
# 第一阶段复现（无硬件纯语音）：豆包端到端实时语音替换 OpenAI Realtime。
# 官方 livekit-plugins-volcengine 1.3.0 硬锁 livekit-agents==1.2.9，故这里固定该版本。
# 电机/LED 等硬件依赖（lerobot/feetech/rpi）挪到 optional，避免无硬件环境安装。
dependencies = [
    "livekit-agents==1.2.9",
    "livekit-plugins-volcengine==1.3.0",
    "numpy>=2.2.6",
    "python-dotenv",
    "sounddevice>=0.5.2",
]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot" }

[project.optional-dependencies]
# 硬件到位后安装：uv sync --extra hardware（在树莓派/接舵机的机器上）
hardware = [
    "feetech-servo-sdk>=1.0.0",
    "lerobot>=0.3.3",
    "pyaudio>=0.2.14",
    "adafruit-circuitpython-neopixel",
    "rpi-ws281x",
]
