[project]
name = "lelamp-runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
# 第一阶段复现（无硬件纯语音）：火山豆包新版统一 API 的 STT+LLM+TTS 三段式。
# - STT/TTS：本仓库自写插件 lelamp/voice/volc_v3（只依赖 livekit-agents 基类，无需额外插件包）。
# - LLM：openai 插件接方舟 Ark（OpenAI 兼容），即原版的 livekit-agents[openai]，故沿用该 extra。
# 已弃用旧的 livekit-plugins-volcengine（其 RealtimeModel 旧 API 已移除）。版本锁仍固定 1.2.9。
# 电机/LED 等硬件依赖（lerobot/feetech/rpi）挪到 optional，避免无硬件环境安装。
dependencies = [
    "livekit-agents[openai]==1.2.9",
    "numpy>=2.2.6",
    "python-dotenv",
    "sounddevice>=0.5.2",
]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot" }

[project.optional-dependencies]
# 硬件到位后安装：uv sync --extra hardware（在树莓派/接舵机的机器上）
hardware = [
    "feetech-servo-sdk>=1.0.0",
    "lerobot>=0.3.3",
    "pyaudio>=0.2.14",
    "adafruit-circuitpython-neopixel",
    "rpi-ws281x",
]
